[workspace]
members = [
  "quantum_ipsec",
  "cli",
]

[workspace.package]
authors = ["Mayckon Giovani <mayckonrlyeh@gmail.com>"]
description = "Quantum-Safe IPSec implementation in Rust"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/doomhammerhell/quantum-tunneler"
version = "0.1.0"

[workspace.dependencies]
clap = {version = "4.4", features = ["derive"]}
getrandom = "0.2"
heapless = "0.8"
rand_core = "0.6"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
