[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "quantum-ipsec-cli"
repository.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
quantum_ipsec = {path = "../quantum_ipsec"}
serde.workspace = true
serde_json.workspace = true
